<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_categories" />


        <item
            android:id="@+id/r_nav_activeGigs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Active Gigs" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Responses" />

        <item
            android:id="@+id/nav_buyerRequsts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Buyer Requests" />


    </group>
</menu>