<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#002B57"
        tools:context=".n_view_gig">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/n_view_gig_title"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.769" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="601dp"
            android:background="@drawable/back_trans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/n_view_gig_category"
                        android:textColor="@color/Orange"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/n_tv_view_gig_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/n_category_carpenter" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/n_view_gig_gig_title"
                        android:textColor="@color/Orange"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/n_tv_view_gig_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:ems="10"
                        android:padding="10dp"
                        android:text="@string/n_view_gig_title_fill" />

                    <GridLayout
                        android:layout_width="372dp"
                        android:layout_height="wrap_content"
                        android:columnCount="2"
                        android:rowCount="2">

                        <TextView
                            android:layout_width="161dp"
                            android:layout_height="wrap_content"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:layout_marginTop="30dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/n_view_gig_phone_no"
                            android:textColor="@color/Orange"
                            android:textSize="27sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/n_tv_view_gig_location"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:layout_marginStart="43dp"
                            android:layout_marginLeft="43dp"
                            android:layout_marginTop="7dp"
                            android:ems="10"
                            android:padding="10dp"
                            android:text="@string/n_view_gig_location_fill" />

                        <TextView
                            android:layout_width="161dp"
                            android:layout_height="wrap_content"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_marginStart="43dp"
                            android:layout_marginLeft="43dp"
                            android:layout_marginTop="30dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/n_view_gig_location"
                            android:textColor="@color/Orange"
                            android:textSize="27sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/n_tv_view_gig_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:ems="10"
                            android:gravity="center_vertical"
                            android:padding="10dp"
                            android:text="@string/n_view_gig_phone_fill" />

                    </GridLayout>


                    <TextView
                        android:id="@+id/n_title_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/n_view_gig_email"
                        android:textColor="@color/Orange"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/n_tv_view_gig_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:ems="10"
                        android:padding="10dp"
                        android:text="@string/n_view_gig_email_fill" />


                    <TextView
                        android:id="@+id/description_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/n_view_gig_description"
                        android:textColor="@color/Orange"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/n_tv_view_gigg_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:ems="10"
                        android:gravity="top"
                        android:padding="10dp"
                        android:text="@string/n_view_gig_description_fill"
                        tools:paddingTop="10dp" />

                    <Button
                        android:id="@+id/n_btn_view_gig_request_service"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="27dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="13dp"
                        android:background="@drawable/background_button"
                        android:backgroundTint="@color/Orange"
                        android:text="@string/n_btn_request_service"
                        app:backgroundTint="@color/Orange" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>