<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="601dp"
            android:background="@drawable/back_trans"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="216dp"
                android:layout_height="306dp"
                android:layout_marginStart="97dp"
                android:layout_marginLeft="97dp"
                android:contentDescription="@string/r_login_logo"
                android:src="@drawable/handyman_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/r_et_login_email2"
                android:layout_width="277dp"
                android:layout_height="43dp"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/field_gray"
                android:ems="10"
                android:hint="@string/r_et_login_email2"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/r_et_login_pw"
                android:layout_width="277dp"
                android:layout_height="43dp"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/field_gray"
                android:ems="10"
                android:hint="@string/r_et_login_pw"
                android:inputType="textPersonName|textPassword"
                android:paddingLeft="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/r_et_login_email2"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/r_btn_login_login"
                android:layout_width="277dp"
                android:layout_height="37dp"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="31dp"
                android:background="@drawable/field_gray"
                android:text="@string/r_btn_login_login"
                app:backgroundTint="@color/Orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/r_et_login_pw" />

            <TextView
                android:id="@+id/r_tv_login_forgotPw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginLeft="144dp"
                android:layout_marginTop="26dp"
                android:text="@string/r_tv_login_forgotPw"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/r_btn_login_login" />

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="r_tv_login_DntHvAcc,r_tv_login_reg" />

            <TextView
                android:id="@+id/r_tv_login_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="98dp"
                android:layout_marginRight="98dp"
                android:layout_marginBottom="31dp"
                android:text="@string/r_tv_login_reg"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/r_tv_login_DntHvAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginLeft="96dp"
                android:layout_marginBottom="31dp"
                android:text="@string/r_tv_login_DntHvAcc"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/r_tv_loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="27dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/r_tv_loginTitle"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>